@@ -56,6 +56,10 @@ my $api = 'http://localhost:9999/api/';
 
     ## Add experimental features:
     # experimental_proxy => 1,
+
+    ## Set proxy timeouts
+    # proxy_inactivity_timeout => 120,
+    # proxy_connect_timeout => 120,
   },
 
   # See Mojolicious::Plugin::TagHelpers::MailToChiffre
